<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#EFF1F2"
    tools:context=".Opciones.Mis_Datos">


    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <include
            android:id="@+id/include"
            layout="@layout/toolbar" />

        <TextView
            android:id="@+id/MisDatosTXT"
            android:text="@string/MisDatosTXT"
            android:layout_gravity="center"
            android:textSize="25sp"
            android:textColor="#000"
            android:layout_marginTop="5dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

        <!--IMAGEN DEL USUARIO-->
        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/ImagenDato"
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:layout_gravity="center"
            android:layout_marginTop="5dp"
            android:src="@drawable/img_perfil"/>

        <!-- UID -->
        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingHorizontal="10dp"
            android:orientation="horizontal">

            <!-- UID -->
            <TextView
                android:id="@+id/UidDatoTXT"
                android:text="@string/uidDatoTXT"
                android:textSize="18sp"
                android:textColor="#000"
                android:layout_marginTop="10dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

            <!-- UID -->
            <TextView
                android:id="@+id/UidDato"
                android:text="@string/uidDato"
                android:textSize="18sp"
                android:layout_marginTop="10dp"
                android:layout_marginStart="5dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
        </androidx.appcompat.widget.LinearLayoutCompat>

        <!-- NOMBRES -->
        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingHorizontal="10dp"
            android:orientation="horizontal">

            <!-- NOMBRES -->
            <TextView
                android:id="@+id/NombresDatoTXT"
                android:text="@string/NombresDatoTXT"
                android:textSize="18sp"
                android:textColor="#000"
                android:layout_marginTop="3dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

            <!-- NOMBRES -->
            <TextView
                android:id="@+id/NombresDato"
                android:text="@string/NombresDato"
                android:textSize="18sp"
                android:layout_marginTop="3dp"
                android:layout_marginStart="5dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
        </androidx.appcompat.widget.LinearLayoutCompat>

        <!-- APELLIDOS -->
        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingHorizontal="10dp"
            android:orientation="horizontal">

            <!-- APELLIDOS -->
            <TextView
                android:id="@+id/ApellidoDatoTXT"
                android:text="@string/ApellidosDatoTXT"
                android:textSize="18sp"
                android:textColor="#000"
                android:layout_marginTop="3dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

            <!-- APELLIDOS -->
            <TextView
                android:id="@+id/ApellidoDato"
                android:text="@string/ApellidosDato"
                android:textSize="18sp"
                android:layout_marginTop="3dp"
                android:layout_marginStart="5dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
        </androidx.appcompat.widget.LinearLayoutCompat>

        <!-- CORREO -->
        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingHorizontal="10dp"
            android:orientation="horizontal">

            <!-- CORREO -->
            <TextView
                android:id="@+id/CorreoDatoTXT"
                android:text="@string/CorreoDatoTXT"
                android:textSize="18sp"
                android:textColor="#000"
                android:layout_marginTop="3dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

            <!-- CORREO -->
            <TextView
                android:id="@+id/CorreoDato"
                android:text="@string/CorreoDato"
                android:textSize="18sp"
                android:layout_marginTop="3dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
        </androidx.appcompat.widget.LinearLayoutCompat>

        <!-- PASSWORD -->
        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingHorizontal="10dp"
            android:orientation="horizontal">

            <!-- PASSWORD -->
            <TextView
                android:id="@+id/PasswordDatoTXT"
                android:text="@string/PasswordDatoTXT"
                android:textSize="18sp"
                android:textColor="#000"
                android:layout_marginTop="3dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

            <!-- PASSWORD -->
            <TextView
                android:id="@+id/PasswordDato"
                android:text="@string/PasswordDato"
                android:textSize="18sp"
                android:layout_marginTop="3dp"
                android:layout_marginStart="5dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
        </androidx.appcompat.widget.LinearLayoutCompat>

        <!-- EDAD -->
        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingHorizontal="10dp"
            android:orientation="horizontal">

            <!-- EDAD -->
            <TextView
                android:id="@+id/EdadDatoTXT"
                android:text="@string/EdadDatoTXT"
                android:textSize="18sp"
                android:textColor="#000"
                android:layout_marginTop="3dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

            <!-- EDAD -->
            <TextView
                android:id="@+id/EdadDato"
                android:text="@string/EdadDato"
                android:textSize="18sp"
                android:layout_marginTop="3dp"
                android:layout_marginStart="5dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
        </androidx.appcompat.widget.LinearLayoutCompat>

        <!-- DIRECCION -->
        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingHorizontal="10dp"
            android:orientation="horizontal">

            <!-- DIRECCION -->
            <TextView
                android:id="@+id/DireccionDatoTXT"
                android:text="@string/DireccionDatoTXT"
                android:textSize="18sp"
                android:textColor="#000"
                android:layout_marginTop="3dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

            <!-- DIRECCION -->
            <TextView
                android:id="@+id/DireccionDato"
                android:text="@string/DireccionDato"
                android:textSize="18sp"
                android:layout_marginTop="3dp"
                android:layout_marginStart="5dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
        </androidx.appcompat.widget.LinearLayoutCompat>

        <!-- TELEFONO -->
        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingHorizontal="10dp"
            android:orientation="horizontal">

            <!-- TELEFONO -->
            <TextView
                android:id="@+id/TelefonoDatoTXT"
                android:text="@string/TelefonoDatoTXT"
                android:textSize="18sp"
                android:textColor="#000"
                android:layout_marginTop="3dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

            <!-- TELEFONO -->
            <TextView
                android:id="@+id/TelefonoDato"
                android:text="@string/TelefonoDato"
                android:textSize="18sp"
                android:layout_marginTop="3dp"
                android:layout_marginStart="5dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
        </androidx.appcompat.widget.LinearLayoutCompat>

        <!-- BOTON ACTUALIZAR DATOS -->
        <Button
            android:id="@+id/Actualizar"
            android:text="@string/Actualizar"
            android:layout_marginTop="25dp"
            android:background="#6E7BA7"
            android:textColor="#fff"
            android:layout_gravity="center"
            android:drawableStart="@drawable/actualizar_ico"
            android:drawablePadding="15dp"
            android:padding="15dp"
            android:layout_width="200dp"
            android:layout_height="wrap_content"/>

        <!-- BOTON ACTUALIZAR CONTRASENA -->
        <Button
            android:id="@+id/ActualizarPass"
            android:text="@string/ActualizarPass"
            android:background="#6E7BA7"
            android:textColor="#fff"
            android:layout_gravity="center"
            android:drawableStart="@drawable/actualizar_pass"
            android:drawablePadding="15dp"
            android:padding="15dp"
            android:layout_marginTop="5dp"
            android:layout_width="200dp"
            android:layout_height="wrap_content"/>

    </androidx.appcompat.widget.LinearLayoutCompat>
</ScrollView>