<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#EFF7F9"
    tools:context=".CambiarPassword.CambiarPassword">

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <include
            android:id="@+id/include"
            layout="@layout/toolbar" />

        <TextView
            android:id="@+id/MisCredencialesTXT"
            android:text="@string/MisCredencialesTXT"
            android:layout_width="match_parent"
            android:gravity="center"
            android:textSize="25dp"
            android:textColor="#000"
            android:layout_marginTop="10dp"
            android:layout_marginHorizontal="20dp"
            android:layout_height="wrap_content"/>

        <!--CORREO ACTUAL DE LA BD-->
        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="20dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/CorreoActualTXT"
                android:text="@string/CorreoActualTXT"
                android:textSize="20sp"
                android:textColor="#000"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

            <TextView
                android:id="@+id/CorreoActual"
                android:text="@string/CorreoActual"
                android:textSize="20sp"
                android:textColor="#000"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

        </androidx.appcompat.widget.LinearLayoutCompat>

        <!--CONTRASENA ACTUAL DE LA BD-->
        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="20dp"
            android:layout_marginTop="15dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/PassActualTXT"
                android:text="@string/PassActualTXT"
                android:textSize="20sp"
                android:textColor="#000"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

            <TextView
                android:id="@+id/PassActual"
                android:text="@string/PassActual"
                android:textSize="20sp"
                android:textColor="#000"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

        </androidx.appcompat.widget.LinearLayoutCompat>

        <!--INGRESAR CONTRASENA ACTUAL-->
        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="20dp"
            android:layout_marginTop="15dp"
            app:passwordToggleEnabled="true">

            <EditText
                android:id="@+id/ActualPassET"
                android:hint="@string/ActualPassET"
                android:inputType="textPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:importantForAutofill="no"/>

        </com.google.android.material.textfield.TextInputLayout>

        <!--INGRESAR NUEVA CONTRASENA-->
        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="20dp"
            app:passwordToggleEnabled="true">

            <EditText
                android:id="@+id/NuevoPassET"
                android:hint="@string/NuevoPassET"
                android:inputType="textPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:importantForAutofill="no"/>

        </com.google.android.material.textfield.TextInputLayout>

        <!--BOTON PARA CAMBIAR CONTRASENA-->
        <Button
            android:id="@+id/CAMBIARPSSBTN"
            android:text="@string/CAMBIARPSSBTN"
            android:textColor="#fffff2"
            android:layout_marginHorizontal="20dp"
            android:background="#6E7BA7"
            android:layout_marginTop="15dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

    </androidx.appcompat.widget.LinearLayoutCompat>

</ScrollView>