<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#fff"
    tools:context=".Registro">

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:orientation="vertical">

        <!--TITULO-->
        <TextView
            android:text="@string/RegistroTXT"
            android:textStyle="bold"
            android:textSize="20sp"
            android:textColor="#000"
            android:gravity="center"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

        <!--IMAGEN-->
        <androidx.appcompat.widget.AppCompatImageView
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_marginTop="10dp"
            android:layout_gravity="center"
            android:src="@drawable/logoicono"/>

        <!--CORREO-->
        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp">

            <EditText
                android:id="@+id/CORREO"
                android:hint="@string/CORREO"
                android:inputType="textEmailAddress"
                android:textColorHint="#000"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:importantForAutofill="no"/>

        </com.google.android.material.textfield.TextInputLayout>

        <!--CONTRASENA-->
        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/Password"
                android:hint="@string/Password"
                android:inputType="textPassword"
                android:textColorHint="#000"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:importantForAutofill="no" />

        </com.google.android.material.textfield.TextInputLayout>

        <!--NOMBRE-->
        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/NOMBRES"
                android:hint="@string/NOMBRES"
                android:inputType="textCapWords|textAutoCorrect"
                android:textColorHint="#000"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:importantForAutofill="no"/>

        </com.google.android.material.textfield.TextInputLayout>

        <!--APELLIDOS-->
        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/APELLIDOS"
                android:hint="@string/APELLIDOS"
                android:inputType="textCapWords|textAutoCorrect"
                android:textColorHint="#000"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:importantForAutofill="no"/>

        </com.google.android.material.textfield.TextInputLayout>

        <!--EDAD-->
        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/EDAD"
                android:hint="@string/EDAD"
                android:textColorHint="#000"
                android:inputType="number"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:importantForAutofill="no"/>

        </com.google.android.material.textfield.TextInputLayout>

        <!--TELEFONO-->
        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/TELEFONO"
                android:hint="@string/TELEFONO"
                android:textColorHint="#000"
                android:inputType="number"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:importantForAutofill="no"/>

        </com.google.android.material.textfield.TextInputLayout>

        <!--DIRECCION-->
        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/DIRECCION"
                android:hint="@string/DIRECCION"
                android:inputType="textCapWords|textAutoCorrect"
                android:textColorHint="#000"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:importantForAutofill="no" />

        </com.google.android.material.textfield.TextInputLayout>

        <!--REGFISTRAR USUARIO-->
        <Button
            android:id="@+id/REGISTRARUSUARIO"
            android:text="@string/REGISTRARUSUARIO"
            android:background="@drawable/boton_personalizado"
            android:textColor="#fff"
            android:layout_marginTop="15sp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>


    </androidx.appcompat.widget.LinearLayoutCompat>

</RelativeLayout>