<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#fff"
    tools:context=".Login">

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:padding="15sp"
        android:orientation="vertical">

        <androidx.appcompat.widget.AppCompatImageView
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:layout_marginTop="10dp"
            android:src="@drawable/user_solid"
            app:srcCompat="@drawable/boton_personalizado" />

        <!--CORREO ELECTRONICO-->
        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/CorreoLogin"
                android:hint="@string/CorreoLogin"
                android:textColorHint="#fff"
                android:inputType="textEmailAddress"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawableStart="@drawable/user_ico"
                android:drawablePadding="5dp"
                android:importantForAutofill="no"/>

        </com.google.android.material.textfield.TextInputLayout>

        <!--CONTRASENA-->
        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            app:passwordToggleEnabled="true">

            <EditText
                android:id="@+id/PasswordLogin"
                android:hint="@string/PasswordLogin"
                android:textColorHint="#fff"
                android:inputType="textPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawableStart="@drawable/pass_ico"
                android:paddingStart="5dp"
                android:importantForAutofill="no"/>

        </com.google.android.material.textfield.TextInputLayout>

        <!--BOTON -->
        <Button
            android:id="@+id/INGRESAR"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:background="@drawable/boton_personalizado"
            android:text="@string/INGRESAR"
            android:textColor="#fff"
            android:textColorHighlight="#03A9F4"
            android:textColorLink="#2196F3" />

        <!--BOTON LOGIN GOOGLE-->
        <Button
            android:text="@string/INGRESARGOOGLE"
            android:id="@+id/INGRESARGOOGLE"
            android:layout_marginTop="10dp"
            android:background="@drawable/boton_personalizado_dos"
            android:drawableStart="@drawable/pass_ico"
            android:drawablePadding="15dp"
            android:padding="10dp"
            android:layout_width="250dp"
            android:layout_height="wrap_content"/>


    </androidx.appcompat.widget.LinearLayoutCompat>


</androidx.appcompat.widget.LinearLayoutCompat>